[feats]: Ajout des fonctionnalites suivantes : 1. Fix: Suppression de l'annotation @Column sur la liste @OneToMany lignesVente   qui était incorrecte (@OneToMany ne doit pas avoir @Column). 2. Fix: Remplacement de Enum.valueOf() par StatutVenteEnum.fromCode() dans patchVenteStatut   pour :     * utiliser le code interne défini dans l'enum     * rendre la conversion insensible à la casse     * éviter les 500 si le nom de l'enum change 3. Fix: Gestion des exceptions améliorée avec ajout du loging dans GlobalExceptionHandler pour :     * EntityIllegalArgumentException -> 400 BAD REQUEST     * StockQuantiteInsuffisanteException -> 409 CONFLICT     * EntityNotFoundException -> 404 NOT FOUND     * Exception générique -> 500 INTERNAL SERVER ERROR 4. Amélioration logging : toutes les exceptions dans GlobalExceptionHandler sont maintenant loggées   pour faciliter le debug et fournir un ApiError clair côté client. 5. Creation du fichier d'exception 'StockQuantiteInsuffisanteException' pour gerer les exceptions liees à la quantite de stock demande. 6. Création de l'interface 'CodeEnumInterface' pour centraliser la recuperation du code des enums du projet. 7. Changement du 'venteCreateRequestDTO' les attributs 'statutId' en 'statutCode', 'ligneVente' en 'venteLignes'. 8. Creation du dto 'VentePAtchStatutDTO' pour modifier le statut de la vente. 9. Ajout de la fonciton 'ajouterLigneVente' dans la classe 'vente' 10. Création du fichier 'VenteLigneMapper' pour servir de convertisseure de DTO en Entite et vis versa. 11. Modification du Mapper 'venteMapper' pour convertir les ventes de DTO en Entite et vis-versa. 12. Mise a jour du controller et du service de l'entite 'Vente'.